public/css/styles.css
/*
 * Globals
 */

.hide {
  display: none;
}

.credits {
  text-align: center;
}

/* Custom default button */
.btn-secondary,
.btn-secondary:hover,
.btn-secondary:focus {
  color: #333;
  text-shadow: none; /* Prevent inheritance from `body` */
  background-color: #fff;
  border: 0.05rem solid #fff;
}

/*
 * Base structure
 */

body,
html {
  display: grid;
  color: #163840;
  background-image: url(./../img/hero.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  background-attachment: fixed;
  height: 100%;
}

.indexTabs {
  max-width: 76em;
}

/* Header */

.navbar {
  margin-bottom: 2rem;
}

.navbar-brand {
  height: 6rem;
  border-radius: 25%;
}

#contactModal {
  padding: 0.25rem 0;
  font-weight: 700;
  color: #000426;
  background-color: transparent;
  border-bottom: 0.25rem solid transparent;
}
.projBtn {
  background-color: #163840;
  color: white;
}
.modal-content {
  background-color: #f2d5bb;
}
#contactSubmit {
  background-color: #163840;
}
.inner {
  font-size: 1rem;
}

.ctcLinks {
  margin-left: 1.5rem;
  font-size: 1.5rem;
  color: #163840;
}

/* Cover */
.cover {
  display: grid;
  align-content: center;
  text-align: center;
  padding: 0 1.5rem;
}
.cover .btn-lg {
  padding: 0.75rem 1.25rem;
  font-weight: 700;
}

#imMark {
  font-size: 10rem;
}

#getToKnowMe {
  opacity: 0;
}

#subHeading {
  font-size: 2rem;
  margin-bottom: 2rem;
  opacity: 0;
}

/* Headshot */
#headshot {
  max-width: 25%;
  margin-bottom: 1rem;
  float: left;
}

h1,
h2,
h3 {
  color: #163840;
}

/* Stack */
article ul {
  text-align: left;
}
.subtitle {
  margin-bottom: 2rem;
}

/* Footer */
.mastfoot {
  color: #f2d5bb;
}

.nav-pill {
  background-color: #f2d5bb;
  padding: 1rem 0;
  border-radius: 2rem;
  justify-content: center;
  width: 100%;
  text-align: center;
}
.nav-pills {
  justify-content: center;
}
footer span {
  color: #163840;
}

/* -------------------
* Portfolio
------------------- */
.portfolioHeader {
  color: #163840;
  text-align: center;
}
.card {
  color: #163840;
  box-shadow: inset 0 0 5rem #f2d5bb;
  border: 1px solid #f2d5bb;
}

.card-text a {
  color: #f2d5bb;
}
.card-footer {
  text-align: center;
}
.portContainer {
  margin-top: 2rem;
}

.wrapper {
  margin-top: 2rem;
}

.nav-pill:hover {
  cursor: pointer;
}

/* Media Queries */
@media only screen and (max-width: 600px) {
  #introContent,
  #getToKnowMe,
  #stackDiv {
    background-color: rgba(242, 213, 187, 0.75);
    border-radius: 1rem;
  }
  #headshot {
    max-width: 25%;
    margin-bottom: 1rem;
  }
  .navbar-brand {
    display: none;
  }
  .nav-pills {
    display: flex;
    justify-content: center;
  }
  .nav-pill {
    width: 100%;
    margin-bottom: 0.5rem;
    margin-left: 2rem;
  }
  .card img {
    min-width: 10rem;
  }
}

